--- a/html/page4.html
+++ b/html/page4.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
+                    <h5>Sketch Post, May 11, 2025</h5>
+                    <h4>Sketch: May 10, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Most of the hour sketching this was adding the detail to the box until i just decided to stop. As for a ramp spell in the deck, it'll do the job. I don't think I've randomized any other dice cards.</p>
+                    <img id="sketchDay73" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigsxcoogkq3l3d5bdtibszxmxzmk7rmgmb3e23cgis6macfin4az4@jpeg" height="200" alt="My sketch of Vexing Puzzlebox after 60 minutes.">
+                    <h6>My sketch of Vexing Puzzlebox after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
+                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
                     <h5>Sketch Post, May 10, 2025</h5>
                     <h4>Sketch: May 9, 2025</h4>
@@ -55,19 +68,6 @@
                     <h6>(Original Artist: Maxime Minard) <a href="https://scryfall.com/card/big/53/lost-jitte" target="_blank" title="Lost Jitte">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3loru63cnws26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>  
-                <div class="card post">                  
-                    <h2>Day 70: Spelunking (LCI)</h2>
-                    <h5>Sketch Post, May 8, 2025</h5>           
-                    <h4>Sketch: May 7, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>Draw a card, ramp, and lands you control enter untapped? Wild. I am predicting a lot of tapped lands when I randomize the lands, so at least there's something that could offset that.</p>
-                    <img id="sketchDay70" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreig74ojapb6meyd7qleq7mw4yp5oip4u3jmtfnxith24q2uexflzwy@jpeg" height="200" alt="My sketch of Spelunking after 30 minutes.">
-                    <h6>My sketch of Spelunking after 30 minutes.</h6>
-                    <br>   
-                    <img id="realDay70" class="sketchImage" src="https://cards.scryfall.io/large/front/d/3/d3be4257-2316-4a2e-b347-f71c0368a947.jpg?1699044491" height="200" alt="(Original Artist: Ernanda Souza)">
-                    <h6>(Original Artist: Ernanda Souza) <a href="https://scryfall.com/card/lci/213/spelunking" target="_blank" title="Spelunking">Scryfall Link</a></h6> 
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lop4resc2k24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
                         <button>All Posts &#8594; </button>
