--- a/html/page5.html
+++ b/html/page5.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="leftcolumn">
+                <div class="card post">                  
+                    <h2>Day 70: Spelunking (LCI)</h2>
+                    <h5>Sketch Post, May 8, 2025</h5>           
+                    <h4>Sketch: May 7, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Draw a card, ramp, and lands you control enter untapped? Wild. I am predicting a lot of tapped lands when I randomize the lands, so at least there's something that could offset that.</p>
+                    <img id="sketchDay70" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreig74ojapb6meyd7qleq7mw4yp5oip4u3jmtfnxith24q2uexflzwy@jpeg" height="200" alt="My sketch of Spelunking after 30 minutes.">
+                    <h6>My sketch of Spelunking after 30 minutes.</h6>
+                    <br>   
+                    <img id="realDay70" class="sketchImage" src="https://cards.scryfall.io/large/front/d/3/d3be4257-2316-4a2e-b347-f71c0368a947.jpg?1699044491" height="200" alt="(Original Artist: Ernanda Souza)">
+                    <h6>(Original Artist: Ernanda Souza) <a href="https://scryfall.com/card/lci/213/spelunking" target="_blank" title="Spelunking">Scryfall Link</a></h6> 
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lop4resc2k24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">                    
                     <h2>Day 69: Wayfarer's Bauble (TDC)</h2>
                     <h5>Sketch Post, May 8, 2025</h5>           
