--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 80: Tempting Contract (C21)</h2>
+                    <h5>Sketch Post, May 18, 2025</h5>
+                    <h4>Sketch: May 17, 2025</h4>
+                    <p>Sketch Time: 38-minutes</p>
+                    <p>"Isn't money kind of beneath you?" I love tempt cards because they are so volatile depending on the pod and situation. This and Collective Voyage seem like definite includes from the pool.</p>
+                    <img id="sketchDay80" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreie4defr5zvuofwflclb7u7ofxspik7a6bglmy4wssujpu45e7ooey@jpeg" height="200" alt="My sketch of Tempting Contract after 38 minutes.">
+                    <h6>My sketch of Tempting Contract after 38 minutes.</h6>
+                    <br>
+                    <img id="realDay80" class="sketchImage" src="https://cards.scryfall.io/large/front/9/4/94ac96b6-5e67-43fb-ba65-fbcccb82bf1c.jpg?1625192695" height="200" alt="(Original Artist: Tomas Duchek)"></img>
+                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/c21/78/tempting-contract" target="_blank" title="Tempting Contract">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpip4dimbs2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 79: Chrome Mox (2XM)</h2>
                     <h5>Sketch Post, May 17, 2025</h5>
                     <h4>Sketch: May 16, 2025</h4>
@@ -54,19 +67,6 @@
                     <img id="realDay78-2" class="sketchImage" src="https://cards.scryfall.io/large/front/a/a/aa6e1fb5-a06b-4e10-8cc7-785e0f0b298e.jpg?1561991614" height="200" alt="(Original Artist: Ron Spencer)"></img>
                     <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/m10/163/warp-world" target="_blank" title="Warp World">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgvtl5l223" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 78-1: Primal Growth (CMA)</h2>
-                    <h5>Sketch Post, May 16, 2025</h5>
-                    <h4>Sketch: May 15, 2025</h4>
-                    <p>Sketch Time: 55-minutes</p>
-                    <p>I just noticed this doesn't put the basic land(s) into play tapped while writing this. Neat. Also if the card requires a kicker cost of sacrificing a creature, why person not also turning into tree?</p>
-                    <img id="sketchDay78-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiak5aotjvf6gbp6hjaxz2zswp3ye2iymxvqtv3xnyxdoapgxlzm7e@jpeg" height="200" alt="My sketch of Primal Growth after 55 minutes.">
-                    <h6>My sketch of Primal Growth after 55 minutes.</h6>
-                    <br>
-                    <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
-                    <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
