--- a/html/page2.html
+++ b/html/page2.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 78-1: Primal Growth (CMA)</h2>
+                    <h5>Sketch Post, May 16, 2025</h5>
+                    <h4>Sketch: May 15, 2025</h4>
+                    <p>Sketch Time: 55-minutes</p>
+                    <p>I just noticed this doesn't put the basic land(s) into play tapped while writing this. Neat. Also if the card requires a kicker cost of sacrificing a creature, why person not also turning into tree?</p>
+                    <img id="sketchDay78-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiak5aotjvf6gbp6hjaxz2zswp3ye2iymxvqtv3xnyxdoapgxlzm7e@jpeg" height="200" alt="My sketch of Primal Growth after 55 minutes.">
+                    <h6>My sketch of Primal Growth after 55 minutes.</h6>
+                    <br>
+                    <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
+                    <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 77: Coveted Jewel (FIC)</h2>
                     <h5>Sketch Post, May 15, 2025</h5>
                     <h4>Sketch: May 14, 2025</h4>
@@ -54,19 +67,6 @@
                     <img id="realDay76" class="sketchImage" src="https://cards.scryfall.io/large/front/6/0/60bc8cfc-8f68-4ec7-92a7-98380d92f69e.jpg?1740417457" height="200" alt="(Original Artist: Erikas Perl)"></img>
                     <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/ltc/409/sol-ring" target="_blank" title="Sol Ring">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp5yzg2iis2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 75: Talisman of Progress (TDC)</h2>
-                    <h5>Sketch Post, May 13, 2025</h5>
-                    <h4>Sketch: May 12, 2025</h4>
-                    <p>Sketch Time: 13-minutes</p>
-                    <p>I was very happy pulling this as a possibility for the random deck. The sketch was pretty fast, but I know I'm going to be looking up how to do the metallic effect when I get to painting.</p>
-                    <img id="sketchDay75" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihk56xwhtnwp4xnjue4poj6zvk6dctoxjbutln6b7x2c4comzzxgi@jpeg" height="200" alt="My sketch of Talisman of Progress after 13 minutes.">
-                    <h6>My sketch of Talisman of Progress after 13 minutes.</h6>
-                    <br>
-                    <img id="realDay75" class="sketchImage" src="https://cards.scryfall.io/large/front/9/d/9d6a5ed4-54b3-4660-8d41-953336f2fe74.jpg?1743207397" height="200" alt="(Original Artist: Mike Dringenberg)"></img>
-                    <h6>(Original Artist: Mike Dringenberg) <a href="https://scryfall.com/card/tdc/333/talisman-of-progress" target="_blank" title="Talisman of Progress">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp3p4ikrjk2w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
