--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 81: Ral Zarek (RVR)</h2>
+                    <h5>Sketch Post, May 19, 2025</h5>
+                    <h4>Sketch: May 18, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Last card of the two weeks of random "ramp" spells. I've missed this striking-anime art style, and it turns out the artist has done a lot of work in Cardfight Vanguard, which I played two reboots ago.</p>
+                    <img id="sketchDay81" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibnj2gxbaigdpfp4vz55dpkhmryewtfnjqf5rbhaptkg4w7rsqohm@jpeg" height="200" alt="My sketch of Ral Zarek after 60 minutes.">
+                    <h6>My sketch of Ral Zarek after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay81" class="sketchImage" src="https://cards.scryfall.io/large/front/4/9/49f219db-b6e2-48bf-a316-b57736e09ae9.jpg?1704835621" height="200" alt="(Original Artist: Fukuzo Katsura)"></img>
+                    <h6>(Original Artist: Fukuzo Katsura) <a href="https://scryfall.com/card/rvr/445/ral-zarek" target="_blank" title="Ral Zarek">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpl4yjwudk24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 80: Tempting Contract (C21)</h2>
                     <h5>Sketch Post, May 18, 2025</h5>
                     <h4>Sketch: May 17, 2025</h4>
