--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 82: Dragon's Fire (AFR)</h2>
+                    <h5>Sketch Post, May 20, 2025</h5>
+                    <h4>Sketch: May 19, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Start of the function:removal section. I do have 2 dragons in the option pool, and if maskwood nexus is on the field, I'd have a trove of options.</p>
+                    <img id="sketchDay82" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigjsjrlfcbbsf4g6vyb5dy5qroy2k4qzvravcot2hytereozhsesy@jpeg" height="200" alt="My sketch of Dragon's Fire after 30 minutes.">
+                    <h6>My sketch of Dragon's Fire after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay82" class="sketchImage" src="https://cards.scryfall.io/large/front/9/6/9666987a-5267-46d3-9b00-31baa92a9cbc.jpg?1627706098" height="200" alt="(Original Artist: Campbell White)"></img>
+                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/afr/139/dragons-fire" target="_blank" title="Dragon's Fire">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpne45os7k2c" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 81: Ral Zarek (RVR)</h2>
                     <h5>Sketch Post, May 19, 2025</h5>
                     <h4>Sketch: May 18, 2025</h4>
