--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 83: Nazgûl Battle-Mace (LTC)</h2>
+                    <h5>Sketch Post, May 21, 2025</h5>
+                    <h4>Sketch: May 20, 2025</h4>
+                    <p>Sketch Time: 27-minutes</p>
+                    <p>I wasn't playing when the LoTR UB came out, so I was surprised there wasn't a modern frame version of these scene cards. My eye briefly lingers on the mace to look at all the black wings.</p>
+                    <img id="sketchDay83" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidxk3fv2l7nb4h5y3vusumgaoquasrckua546utpcqou74sihrufe@jpeg" height="200" alt="My sketch of NazgÃ»l Battle-Mace after 27 minutes.">
+                    <h6>My sketch of Nazgûl Battle-Mace after 27 minutes.</h6>
+                    <br>
+                    <img id="realDay83" class="sketchImage" src="https://cards.scryfall.io/large/front/d/0/d06cf71d-1394-4d93-aa46-14923418c256.jpg?1695455474" height="200" alt="(Original Artist: Campbell White)"></img>
+                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/ltc/554/nazg%C3%BBl-battle-mace" target="_blank" title="NazgÃ»l Battle-Mace">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpq5zvarcc2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 82: Dragon's Fire (AFR)</h2>
                     <h5>Sketch Post, May 20, 2025</h5>
                     <h4>Sketch: May 19, 2025</h4>
@@ -54,45 +67,6 @@
                     <img id="realDay81" class="sketchImage" src="https://cards.scryfall.io/large/front/4/9/49f219db-b6e2-48bf-a316-b57736e09ae9.jpg?1704835621" height="200" alt="(Original Artist: Fukuzo Katsura)"></img>
                     <h6>(Original Artist: Fukuzo Katsura) <a href="https://scryfall.com/card/rvr/445/ral-zarek" target="_blank" title="Ral Zarek">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpl4yjwudk24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 80: Tempting Contract (C21)</h2>
-                    <h5>Sketch Post, May 18, 2025</h5>
-                    <h4>Sketch: May 17, 2025</h4>
-                    <p>Sketch Time: 38-minutes</p>
-                    <p>"Isn't money kind of beneath you?" I love tempt cards because they are so volatile depending on the pod and situation. This and Collective Voyage seem like definite includes from the pool.</p>
-                    <img id="sketchDay80" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreie4defr5zvuofwflclb7u7ofxspik7a6bglmy4wssujpu45e7ooey@jpeg" height="200" alt="My sketch of Tempting Contract after 38 minutes.">
-                    <h6>My sketch of Tempting Contract after 38 minutes.</h6>
-                    <br>
-                    <img id="realDay80" class="sketchImage" src="https://cards.scryfall.io/large/front/9/4/94ac96b6-5e67-43fb-ba65-fbcccb82bf1c.jpg?1625192695" height="200" alt="(Original Artist: Tomas Duchek)"></img>
-                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/c21/78/tempting-contract" target="_blank" title="Tempting Contract">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpip4dimbs2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 79: Chrome Mox (2XM)</h2>
-                    <h5>Sketch Post, May 17, 2025</h5>
-                    <h4>Sketch: May 16, 2025</h4>
-                    <p>Sketch Time: 21-minutes</p>
-                    <p>First game changer I got from scryfall/random. I've never played with moxes before, but I don't see it fitting the vibe coming to a new bracket 1 table, even when the deck is randomly generated.</p>
-                    <img id="sketchDay79" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiajstqb5djn5pq7knihvo3xlxcc4anofdckwzr5mjjowc4fjo4qei@jpeg" height="200" alt="My sketch of Chrome Mox after 21 minutes.">
-                    <h6>My sketch of Chrome Mox after 21 minutes.</h6>
-                    <br>
-                    <img id="realDay79" class="sketchImage" src="https://cards.scryfall.io/large/front/0/e/0e94d334-e043-42f2-ba5c-be497d82f2c8.jpg?1599711293" height="200" alt="(Original Artist: Franz Vohwinkel)"></img>
-                    <h6>(Original Artist: Franz Vohwinkel) <a href="https://scryfall.com/card/2xm/358/chrome-mox" target="_blank" title="Chrome Mox">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpfpd6xwi22n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 78-2: Warp World (M10)</h2>
-                    <h5>Sketch Post, May 16, 2025</h5>
-                    <h4>Sketch: May 15, 2025</h4>
-                    <p>Sketch Time: 62-minutes</p>
-                    <p>I sketched the last card around 2AM, but I wanted to draw more later in the day (thus Day 78-2). This was scryfall's response to not just taking a break, another technically "ramp" card for the deck.</p>
-                    <img id="sketchDay78-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiduekigvkdkmmnnepuss73guehomuols63kver4ixirl6tl7enj4e@jpeg" height="200" alt="My sketch of Warp World after 62 minutes.">
-                    <h6>My sketch of Warp World after 62 minutes.</h6>
-                    <br>
-                    <img id="realDay78-2" class="sketchImage" src="https://cards.scryfall.io/large/front/a/a/aa6e1fb5-a06b-4e10-8cc7-785e0f0b298e.jpg?1561991614" height="200" alt="(Original Artist: Ron Spencer)"></img>
-                    <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/m10/163/warp-world" target="_blank" title="Warp World">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgvtl5l223" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
