--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 84: Decimate (OTP)</h2>
+                    <h5>Sketch Post, May 22, 2025</h5>
+                    <h4>Sketch: May 21, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>This is one of the few times that I've felt that my base sketch really nailed the vibe despite the differences.</p>
+                    <img id="sketchDay84" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifqacondo2qrdfgh4axctaq4ihd7wnwz7riaktzqtgchinph53iue@jpeg" height="200" alt="My sketch of Decimate after 51 minutes.">
+                    <h6>My sketch of Decimate after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay84" class="sketchImage" src="https://cards.scryfall.io/large/front/a/6/a6166dde-22d8-4fd1-93f9-c4e7762ae2a0.jpg?1712353560" height="200" alt="(Original Artist: Yohann Schepacz)"></img>
+                    <h6>(Original Artist: Yohann Schepacz) <a href="https://scryfall.com/card/otp/41/decimate" target="_blank" title="Decimate">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpsovcfsec2t" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 83: Nazgûl Battle-Mace (LTC)</h2>
                     <h5>Sketch Post, May 21, 2025</h5>
                     <h4>Sketch: May 20, 2025</h4>
