--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 85: Narset's Rebuke (TDM)</h2>
+                    <h5>Sketch Post, May 23, 2025</h5>
+                    <h4>Sketch: May 22, 2025</h4>
+                    <p>Sketch Time: 61-minutes</p>
+                    <p>It has been a sec since I thought about mtg lore, but if the Dragonlords were swallowed by the Dragonstorm, doesn't that mean they could be spit out by the lowercase dragonstorms in other planes?</p>
+                    <img id="sketchDay85" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiarvopsjxxmob7ygu623vh5trcwi7awxep55dnhvpzvfudemky7ju@jpeg" height="200" alt="My sketch of Narset's Rebuke after 61 minutes.">
+                    <h6>My sketch of Narset's Rebuke after 61 minutes.</h6>
+                    <br>
+                    <img id="realDay85" class="sketchImage" src="https://cards.scryfall.io/large/front/5/0/5098bd73-d51c-4db4-bf06-fd4854089d37.jpg?1743204422" height="200" alt="(Original Artist: Diego Gisbert)"></img>
+                    <h6>(Original Artist: Diego Gisbert) <a href="https://scryfall.com/card/tdm/114/narsets-rebuke" target="_blank" title="Narset's Rebuke">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpuofpatu22i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 84: Decimate (OTP)</h2>
                     <h5>Sketch Post, May 22, 2025</h5>
                     <h4>Sketch: May 21, 2025</h4>
