--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 88: Rakdos Charm (DSC)</h2>
+                    <h5>Sketch Post, May 25, 2025</h5>
+                    <h4>Sketch: May 24, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Double-checked, this artist also did Boros Charm. But from what I can find, the guild was not named after the artist.</p>
+                    <img id="sketchDay88" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibl23nldz52ac7kpmucswg73aomuoore3ou2gkg6fd6xxerinaphi@jpeg" height="200" alt="My sketch of Rakdos Charm after 60 minutes.">
+                    <h6>My sketch of Rakdos Charm after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay88" class="sketchImage" src="https://cards.scryfall.io/large/front/a/9/a99cd459-5434-4e2b-93fb-5e1bc64db3df.jpg?1726285239" height="200" alt="(Original Artist: Zoltan Boros)"></img>
+                    <h6>(Original Artist: Zoltan Boros) <a href="https://scryfall.com/card/dsc/229/rakdos-charm" target="_blank" title="Rakdos Charm">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq26igpans2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 86: Thunderous Wrath (MM3)</h2>
                     <h5>Sketch Post, May 24, 2025</h5>
                     <h4>Sketch: May 23, 2025</h4>
